# nusif-freesurface

./: .cproject  .gitignore  .project  BreakingDam.par  Breakingdum.par  BreakingdumTest.cc  CMakeLists.txt  Drop.par  README.md  README.txt  ReadMe.txt  backstep.par  dcavity.par  ex04_Hahn.tar.bz2  nusif_free_surface.tar.bz2  ownDcavity.par  poisson.par  simpledrop.par
Presentation/: FreeSurfaceFlow.aux  FreeSurfaceFlow.nav  FreeSurfaceFlow.snm  FreeSurfaceFlow.tex  FreeSurfaceFlow.toc  FreeSurfaceFlow.vrb
griebel/: boundary.cpp  drop.par  extras.cpp  extras.hpp  init.cpp  main.cpp  nast2d  nast2d.sh  surface.cpp  uvp.cpp  visual.cpp
mohammad-test/: BreakingDam_0000_fluid.vtk  BreakingDam_0000_particles.vtk  BreakingDam_0001_fluid.vtk  BreakingDam_0001_particles.vtk  BreakingDam_0002_fluid.vtk  BreakingDam_0002_particles.vtk  BreakingDam_0003_fluid.vtk  BreakingDam_0003_particles.vtk  BreakingDam_0004_fluid.vtk  BreakingDam_0004_particles.vtk  BreakingDam_0005_fluid.vtk  BreakingDam_0005_particles.vtk  BreakingDam_0006_fluid.vtk  BreakingDam_0006_particles.vtk  BreakingDam_0007_fluid.vtk  BreakingDam_0007_particles.vtk  BreakingDam_0008_fluid.vtk  BreakingDam_0008_particles.vtk  BreakingDam_0009_fluid.vtk  BreakingDam_0009_particles.vtk  BreakingDam_0010_fluid.vtk  BreakingDam_0010_particles.vtk  BreakingDam_0011_fluid.vtk  BreakingDam_0011_particles.vtk  BreakingDam_0012_fluid.vtk  BreakingDam_0012_particles.vtk  BreakingDam_0013_fluid.vtk  BreakingDam_0013_particles.vtk  BreakingDam_0014_fluid.vtk  BreakingDam_0014_particles.vtk  BreakingDam_0015_fluid.vtk  BreakingDam_0015_particles.vtk  BreakingDam_0016_fluid.vtk  BreakingDam_0016_particles.vtk  BreakingDam_0017_fluid.vtk  BreakingDam_0017_particles.vtk  BreakingDam_0018_fluid.vtk  BreakingDam_0018_particles.vtk  BreakingDam_0019_fluid.vtk  BreakingDam_0019_particles.vtk  (+615 more)
src/: Array.cc  Array.hh  CMakeLists.txt  Debug.cc  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  GrayScaleImage.cc  GrayScaleImage.hh  Particle.cc  Particle.hh  ParticleTracer.cc  ParticleTracer.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  VTKWriter.hh  lodepng.cc  main.cc
temp/src/: Array.cc  Array.hh  Debug.cc  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  GrayScaleImage.cc  GrayScaleImage.hh  Particle.cc  Particle.hh  ParticleTracer.cc  ParticleTracer.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  Types.hh  VTKWriter.cc  lodepng.h
tests/: ArrayTest.cc  ArrayTestInput.txt  BreakingdumTest.cc  CMakeLists.txt  DcavityTest.cc  FGTest.cc  FileReaderTest.cc  FileReaderTestInput.txt  FreeSurfaceTests.cc  ParticleTracerTests.cc  SORTest.cc
without pointer/src/: FluidSimulator.cc  ParticleTracer.cc  ParticleTracer.hh  StaggeredGrid.cc  StaggeredGrid.hh  VTKWriter.cc  VTKWriter.hh
without pointer/tests/: BreakingdumTest.cc  FGTest.cc  (+4 more)
